--- a/README
+++ b/README
@@ -3,6 +3,7 @@
 Python dependencies:
   Flask
   Flask-SQLAlchemy
+  Flask-Mail
   pytz
   psycopg2 [PostgreSQL] -- May not be needed with LowlaDB
   Gunicorn [Production/Testing]
